# sm-workbench

./: '  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  Todo.txt  _todo.txt  compile_commands.json  notes.txt  sm-workbench.sln  todo.txt
Assets/Shaders/: gizmo.ps.hlsl  gizmo.vs.hlsl  infinite-grid.frag  infinite-grid.ps.hlsl  infinite-grid.vs.hlsl  post-processing.cs.hlsl  simple-diffuse.frag  simple-diffuse.ps.hlsl  simple-diffuse.vert  simple-diffuse.vs.hlsl  simple-material.ps.hlsl  simple-material.vs.hlsl  vertex-color.ps.hlsl  vertex-color.vs.hlsl
RawAssets/: BuildAndDeployAssets.bat
RawAssets/Shaders/: BuildShaders.bat  infinite-grid.frag  infinite-grid.vert  pass-through.vert  post-process.frag  simple-color.frag  simple-color.vert  simple-diffuse.frag  tri.vert
assets/shaders/: compile.bat  simple-color.frag  simple-color.vert  tri-vert.spv  tri.frag  tri.vert
raw_assets/_shaders/: gizmo.ps.hlsl  simple-material.ps.hlsl
raw_assets/shaders/: simple-material.vs.hlsl
sm-workbench/: sm-workbench.vcxproj  sm-workbench.vcxproj.filters
sm-workbench/Source/: App.cpp  App.h  App_old.cpp  MainWin32.cpp
sm-workbench/src/: app.cpp  app.h  game.cpp  game.h  main_win.cpp  win32_main.cpp
sm-workbench/src/game/: game.cpp  game.h
src/: App.cpp  App.h  MainWin.cpp  app.cpp  game.cpp  game.h  main_win32.cpp
tools/: build.bat  compile-shaders.bat  run.bat  vs.bat
